# anti-slop-cannon

./: .env.example  .gitignore  README.md  anti_slop_cannon.py  anti_slop_canon.py  pyproject.toml
evals/: run_evals.py
evals/fixtures/sloppy_repo/billing/: invoice_totals.py
evals/fixtures/sloppy_repo/payments/: payment_totals.py
evals/fixtures/sloppy_repo/reports/: csv_export.py
evals/fixtures/sloppy_repo/utils/: url_tools.py
evals/slop_examples/: manual_total_loop.py
